# Agentleman-Hackathon-Softserve

./: .env  .env.example  .gitignore  AGENTS_USE.md  QUICKGUIDE.md  README.md  SCALING.md  docker-compose.yml  env.example  run_ingest_mock_batch.py
.agents/: coding_guidelines.md  design_guidelines.md  goal.md
.github/: PULL_REQUEST_TEMPLATE.md
api/src/modules/stub-payment/: service.ts
backend/: .env.example  .gitignore  Dockerfile  README.md  claude.md  docker-compose.yml  pyproject.toml
backend/scripts/: run_ingest_mock_batch.py  run_workflow_mock.py
backend/src/api/: entrypoint.py
backend/src/api/routes/: incident_routes.py
backend/src/guardrails/: __init__.py  base.py  input_guardrails.py  models.py  relevance_guardrail.py  templates.py  validators.py
backend/src/integrations/: base.py  models.py  notifications.py  providers.py  qdrant_store.py  ticketing.py
backend/src/qdrant/: setup.py
backend/src/qdrant_setup/: incidents.json  setup.py
backend/src/seeders/: incidents.json  seeder.py
backend/src/services/jira/: README.md  bridge.py  clean_test_issues.py  client.py  observability.py
backend/src/services/jira/tests/: test_bridge.py  test_live_jira_integration.py
backend/src/services/notification-zavu/: .env.example  README.md  bridge.py  client.py  observability.py
backend/src/services/notification-zavu/tests/: test_bridge.py
backend/src/services/notifications/: README.md  bridge.py  client.py  observability.py
backend/src/services/notifications/tests/: test_bridge.py
backend/src/utils/: llama_index_mlflow.py  logger.py  setup.py  tracing.py
backend/src/workflow/: events.py  models.py  observability.md  parallel_workflow.py  sre_workflow.py
backend/src/workflow/phases/: classification.py  preprocessing.py  resolution.py  routing.py  ticketing.py
backend/src/workflow/tools/: business_impact.py  codebase_analyzer.py  infra_analyzer.py  telemetry_analyzer.py
backend/src/workflow/tools/mock_data/: business_metrics.py  telemetry_logs.py
backend/tests/: conftest.py  test_codebase_analyzer.py  test_gemini_integration.py  test_ingest_endpoint.py  test_ingest_integration.py  test_rerank_candidates.py  test_resolution_notifications.py  test_retrieve_candidates.py  test_retrieve_candidates_direct.py  test_sre_workflow.py  test_ticketing_notifications.py
ecommerce-platform/: .env.template  README.md  docker-compose.yml  package.json
ecommerce-platform-frontend/src/lib/: constants.tsx
ecommerce-platform-frontend/src/modules/checkout/components/payment-button/: index.tsx
ecommerce-platform/api/: .dockerignore  Dockerfile  medusa-config.ts
ecommerce-platform/api/scripts/: bootstrap.sh  create-admin-user.sh
ecommerce-platform/api/src/scripts/: bootstrap.ts  export-publishable-key.ts  seed.ts
ecommerce-platform/scripts/: prepare-db.sh
ecommerce-platform/src/modules/stub-payment/: index.ts
ecommerce-platform/web/: .dockerignore  .env.example  .gitignore  Dockerfile
ecommerce-platform/web/scripts/: start.sh
ecommerce-platform/web/src/app/: layout.tsx
ecommerce-platform/web/src/app/api/error-report/: route.ts
ecommerce-platform/web/src/lib/data/: cookies.ts  locale-actions.ts
ecommerce-platform/web/src/modules/common/components/error-report/: index.tsx
ecommerce-platform/web/src/modules/common/icons/: report.tsx
frontend/: README.md
observability/: FILE_LOGS.md  README.md  docker-compose.yml  reset-data.sh
observability/.agents/: coding_guidelines.md  implementation_plan.md  task_list.md
observability/alloy/: config.alloy
observability/grafana/provisioning/dashboards/: README.md  default.yaml
observability/grafana/provisioning/dashboards/definitions/: README.md  ai-observability.json
observability/grafana/provisioning/datasources/: README.md  default.yaml
observability/mlflow/: Dockerfile  README.md
observability/prometheus/: prometheus.yml
observability/promtail/: config.yml
observability/test/: Dockerfile  README.md  emit_logs.py  emit_metrics.py  emit_traces.py  pyproject.toml  requirements.txt  simulate_stack_check.py
sre-platform/: README.md  docker-compose.yml
sre-platform/api/: .env.example  Dockerfile
sre-platform/api/src/: config.py  main.py
sre-platform/api/src/auth/: dependencies.py  router.py
sre-platform/api/src/reports/: router.py
sre-platform/web/: .env.example  Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
sre-platform/web/src/: App.tsx  api.ts  auth.ts  index.css
sre-platform/web/src/pages/: LoginPage.tsx  ReportPage.tsx
web/: package.json
